# DEMO

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.build.yml  docker-compose.postgresql.yml  docker-compose.prod.yml  pyproject.toml  startup_server.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  feature_request_api.yml
.github/workflows/: pytest_account_password_management.yml  ruff.yml
lib/: api_doc_response.py  custom_http_exception.py  custom_response.py  db.py  exceptions.py  schema.py  unit_test.py
lib/db_engine/: db_interface.py  sqlalchemy.py
projects/account_password_management/: Dockerfile  alembic.ini  app.py  docker-compose.yml
projects/account_password_management/alembic/: env.py
projects/account_password_management/alembic/versions/: 1_account_create_table.py  2_account_add_column.py
projects/account_password_management/src/: __init__.py  main.py
projects/account_password_management/src/api/account/: __init__.py  controller.py  query.py  routers.py
projects/account_password_management/src/api/authentication/: __init__.py  controller.py  routers.py
projects/account_password_management/src/config/: config.py
projects/account_password_management/src/models/: __init__.py  account.py  alembic_version.py
projects/account_password_management/src/utils/: db_connector.py  password.py
projects/account_password_management/tests/: conftest.py  test_account.py  test_authentication.py
