[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["TingYi <a75896453@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
isort = "^5.13.2"
pytest = "^8.3.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
